<resources>

    <string name="app_name">Warcraft Game Companion</string>
    <string name="label_main_activity">MainActivity</string>
    <string name="label_register">Register</string>

    <!--
        Menu tabs: screen names
    -->
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_news">News</string>
    <string name="nav_add">Add</string>

    <!--
        NEWS test
    -->
    <string name="home_title_shadowlands">Shadowlands Arrives November 23</string>
    <string name="home_text_shadowlands">Greetings heroes of the Horde and the Alliance, On behalf of the entire World of Warcraft team, I’d like to extend a heartfelt thank-you for your patience as we’ve continued to work on Shadowlands, and for all of the words of support after we made the tough decision to delay the game. Today, I’m happy to share that the expansion will be arriving November 23 at 3 p.m. PST (November 24 at 12 a.m. CET).</string>
    <string name="home_title_celebrateWoW">Celebrate 16 Years of World of Warcraft!</string>
    <string name="home_text_celebrateWoW">Celebrate 16 years of World of Warcraft with us! Log in between now and November 22 to earn the WoW’s 16th Anniversary achievement, then check your mail for a special Anniversary Gift Package.

Inside the package you’ll find 200 Timewarped Badges, a Celebration Package item to increase experience and reputation gains by 16%, and a “Letter from the Timewalkers,” which will start a new quest leading you to either Orgrimmar or Stormwind.

In addition, questgivers Historian Llore and Historian Ju’pa will have two daily quests that give players a chance to earn additional Timewarped Badges either by answering World of Warcraft trivia or by defeating some familiar foes. Collectors will also have a chance to pick up a few pieces of classic loot from defeating them.</string>

    <!-- Register -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_log_in_Twitch">Log in with Twitch</string>
    <string name="action_sign_up">Sign up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid email</string>
    <string name="invalid_password">Password must be at least %d characters long and contain letters and numbers</string>
    <string name="incorrect_password">Password is not correct</string>
    <string name="login_failed">"Login failed"</string>

    <!--    FER POST-->

    <string name="info_post_image">Images must be .png, .gif or .jpg files.</string>
    <string name="prompt_image">example.com/images/file.jpg</string>
    <string name="prompt_title">Title</string>
    <string name="action_add_post">Add post</string>
    <string name="invalid_title">Title is empty</string>
    <string name="invalid_image">image URL is not correct</string>
    <string name="add_post">Post successfully created</string>
    <string name="add_post_error">Something has gone wrong</string>


    //Facebook
    <string name="facebook_app_id">411788996923234</string>
    <string name="fb_login_protocol_scheme">fb411788996923234</string>

    //TWITCH
    <string name="twitch_connected">You are connected with twitch!</string>

    //AVATAR
    <string name="new_avatar"> Change avatar!</string>
    <string name="add_avatar"> Avatar successfully changed</string>

</resources>
