<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorSecondary"
    >

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/action_add_post"
        android:textSize="@dimen/tv_default_title_post"
        android:textStyle="bold"
        android:textColor="@color/colorViewComments"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--    Email -->



    <EditText
        android:id="@+id/etTitlePost"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/colorViewComments"
        android:hint="@string/prompt_title"
        android:textColorHint="@color/colorHintText"
        android:shadowColor="@color/colorViewComments"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <!--    Username -->

    <EditText
        android:id="@+id/etImageLink"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/colorViewComments"
        android:hint="@string/prompt_image"
        android:textColorHint="@color/colorHintText"
        android:shadowColor="@color/colorViewComments"
        android:selectAllOnFocus="true"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitlePost"
        />
    <TextView
        android:id="@+id/tvHelpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_post_image"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/etImageLink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <!--    Register -->
    <Button
        android:id="@+id/btnAddPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="@dimen/btn_ggFbTw"
        android:layout_marginEnd="48dp"
        android:text="@string/action_add_post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTitlePost"
        app:layout_constraintVertical_bias="0.2" />




    <ProgressBar
        android:id="@+id/pbAddPostLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btnAddPost"
        app:layout_constraintTop_toBottomOf="@id/tvHelpText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>