<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.NewsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cv_default_radius"
                app:cardElevation="4dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"

                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/iv_default"
                        android:src="@drawable/wow_shadowlands_logo"
                        android:layout_marginTop="1dp"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_title_shadowlands"

                        android:textSize="@dimen/tv_title"
                        android:textStyle="bold"
                        android:textColor="@color/colorViewComments"
                        android:layout_marginRight="@dimen/tv_default_margin"
                        android:layout_marginLeft="@dimen/tv_default_margin"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_text_shadowlands"
                        android:textSize="@dimen/tv_description"
                        android:textColor="@color/colorViewComments"
                        android:layout_marginRight="@dimen/tv_default_margin"
                        android:layout_marginLeft="@dimen/tv_default_margin"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        android:layout_marginBottom="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/cv_default_radius"
            app:cardElevation="4dp"
            android:layout_margin="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/shape_parrafo"
                >
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/iv_default"
                    android:src="@drawable/celebration_16years"
                    android:layout_marginTop="1dp"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_title_celebrateWoW"

                    android:textSize="@dimen/tv_title"
                    android:textStyle="bold"
                    android:textColor="@color/colorViewComments"
                    android:layout_marginRight="@dimen/tv_default_margin"
                    android:layout_marginLeft="@dimen/tv_default_margin"
                    android:layout_marginTop="@dimen/tv_default_margin"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimary"
                    android:layout_marginTop="@dimen/tv_default_margin"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/home_text_celebrateWoW"
                    android:textSize="@dimen/tv_description"
                    android:textColor="@color/colorViewComments"
                    android:layout_marginRight="@dimen/tv_default_margin"
                    android:layout_marginLeft="@dimen/tv_default_margin"
                    android:layout_marginTop="@dimen/tv_default_margin"
                    android:layout_marginBottom="10dp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cv_default_radius"
                app:cardElevation="4dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_parrafo"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/iv_default"
                        android:src="@drawable/wow_shadowlands_logo"
                        android:layout_marginTop="1dp"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_title_shadowlands"

                        android:textSize="@dimen/tv_title"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/tv_default_margin"
                        android:layout_marginLeft="@dimen/tv_default_margin"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_text_shadowlands"
                        android:textSize="@dimen/tv_description"
                        android:textColor="@color/colorViewComments"
                        android:layout_marginRight="@dimen/tv_default_margin"
                        android:layout_marginLeft="@dimen/tv_default_margin"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        android:layout_marginBottom="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/cv_default_radius"
                app:cardElevation="4dp"
                android:layout_margin="15dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/shape_parrafo"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/iv_default"
                        android:src="@drawable/wow_shadowlands_logo"
                        android:layout_marginTop="1dp"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_title_shadowlands"

                        android:textSize="@dimen/tv_title"
                        android:textStyle="bold"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_marginRight="@dimen/tv_default_margin"
                        android:layout_marginLeft="@dimen/tv_default_margin"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home_text_shadowlands"
                        android:textSize="@dimen/tv_description"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginRight="@dimen/tv_default_margin"
                        android:layout_marginLeft="@dimen/tv_default_margin"
                        android:layout_marginTop="@dimen/tv_default_margin"
                        android:layout_marginBottom="10dp"
                        />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>